updated patient  and doctor profile coverage, added test cases, create configs for household and task